# ground-station-gui

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.json  drone_calibration.py  esp8266_mpu6050.ino  pyproject.toml  test_ports.py
.github/workflows/: ci.yml
src/nexcore_ground_station/: __init__.py  app.py  config.py  exceptions.py
tests/: run_all.py  test_config.py  test_mavlink.py
